hphp/test/zend/good/Zend/tests/traits/methods_002.php.expectf

Fatal error: Method '__clone' declared in multiple traits in %s/methods_002.php on line 15
